# nixos-config

./: .envrc  .gitignore  .pre-commit-config.yaml  .sops.yaml  CLAUDE.md  builder.nix  devshell.nix  failures.md  flake.nix  ideas.md  justfile  old.nix  todo
.claude/: settings.local.json
.claude/commands/: flake-update.md
.github/workflows/: build.yml
configurations/home/: bbrian.nix  light.nix  root.nix  yixin.nix
home/: alacritty.nix  default.nix  firefox.nix  ghci.repl  git.nix  impermanence.nix  main.nix  mime.nix  persist.nix  ssh.nix  sway.nix  tasks.nix  tmux.nix  zathura.nix
home/nvim/: default.nix
home/scripts/: default.nix  guiRebuild.sh  playPause.sh  rebuild.sh  tmuxRebuild.sh  toggleTouchPad.sh
home/tasks/: default.nix
home/xmobar/: default.nix
home/xmonad/: Config.hs  default.nix  my-xmonad.cabal  pkg.nix  xinit
home/xmonad/lib/: Modes.hs  NamedScratchpad.hs
home/xmonad/my-xmonad/: Main.hs  my-xmonad.cabal
home/xmonad/my-xmonad/lib/: MyMain.hs
home/zsh/: default.nix  direnv.nix  helpers.sh  starship.nix  viCursor.sh
machines/: default.nix
machines/am/: default.nix  hardware.nix  home.nix  hosting.nix  main.nix  wifi.nix
machines/raptor/: 0001-add-package-lock.patch  default.nix  extra.yml  hardware.nix  home-assistant.nix  home-impermanence.nix  home.nix  impermanence.nix  main.nix  mk-hm.nix  package-lock.json  stack-in-card.nix
machines/torag/: default.nix
modules/: boot.nix  configuration.nix  ghci.repl  git.nix  gotop.patch  home.nix  work.nix
modules/darwin/: cloudflare.nix
modules/dmenu-4.9/: config.h  dmenu.c
modules/flake-parts/: devshell.nix  neovim.nix  xmonad.nix
modules/hardware/: raptor.nix
modules/home/: alacritty.nix  claude.nix  communication.nix  default.nix  desktop.nix  development.nix  firefox-userchrome.css  firefox.nix  (+21 more)
modules/home/xmonad/: Config.hs  Main.hs  default.nix  my-xmonad.cabal  pkg.nix  xinit
modules/home/xmonad/lib/: Modes.hs  NamedScratchpad.hs
nix/: boot.nix  bt.nix  builder.nix  default.nix  disko.nix  dns.nix  impermanence.nix  main.nix  ssh.nix  stylix.nix  useBuilders.nix  wifi.nix  work.nix  xmonad.nix
overlays/: claude-code.nix  fastfetch.nix  opencode.nix  prismlauncher.nix  taskopen.nix  vit.nix
scripts/: hypr-await.sh  update-claude.sh
update-reports/: 2026-03-12.md  2026-03-15.md  2026-03-29.md  2026-04-08.md  2026-05-10.md  2026-05-22.md  2026-05-31.md  2026-07-06.md  2026-07-10.md
(+139 files in other folders)
