cabal-version:      3.0
name:               my-xmonad
version:            0.1.0.0

executable my-xmonad
  main-is:          Main.hs
  build-depends:
    , my-xmonad
    , extra
    , base
    , xmonad
    , xmonad-contrib
    --, xmobar
    , containers
    , text
    , time
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

library
  hs-source-dirs:
    , lib
    , ./.
  exposed-modules:
    Config
    Modes
  build-depends:
    , extra
    , base
    , xmonad
    , xmonad-contrib
    --, xmobar
    , containers
    , text
    , time
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
