cabal-version: 3.0
name:          my-xmonad
version:       0.1.0.0
category:      System
maintainer:    Brian Kuhns
synopsis:      My xmonad config
description:   My xmonad config built with cabal for convenience
license:       BSD-3-Clause

executable my-xmonad
  main-is:          Main.hs

  --TODO use a common block
  build-depends:
    , base
    , containers
    , extra
    , my-xmonad
    , text
    , time
    , xmonad
    , xmonad-contrib

  --, xmobar
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010

library
  hs-source-dirs:   lib .
  exposed-modules:
    Config
    Modes
    NamedScratchpad

  build-depends:
    , base
    , containers
    , extra
    , text
    , time
    , xmonad
    , xmonad-contrib

  --, xmobar
  ghc-options:      -threaded
  default-language: Haskell2010
