cabal-version: 3.0
name:          my-xmonad
version:       0.1.0.0
category:      System
maintainer:    Brian Kuhns
synopsis:      My xmonad config
description:   My xmonad config built with cabal for convenience
license:       BSD-3-Clause

common common-deps
  build-depends:
    , base
    , containers
    , extra
    , text
    , time
    , xmonad
    , xmonad-contrib

  --, xmobar
  default-language: Haskell2010

executable my-xmonad
  import:        common-deps
  main-is:       Main.hs
  build-depends: my-xmonad
  ghc-options:   -threaded -rtsopts -with-rtsopts=-N

library
  import:          common-deps
  hs-source-dirs:  lib .
  exposed-modules:
    Config
    Modes
    NamedScratchpad

  ghc-options:     -threaded
